@@ -1,7 +1,8 @@
 include ../Makefile.inc
 
 HEADERS=
-CMODULES=kernel initial_vga printk
+CMODULES=kernel initial_vga printk \
+	kmalloc
 CCMODULES=main interrupt pic multiboot printstate paging   \
 	memory tasking syscall init_vga ide-disk scheduler \
 	timer						   \
@@ -12,7 +13,7 @@ ASMMODULES=intvecs
 INCLUDE=../libc ../libc++/include $(GCCINCLUDEDIRS) .. .
 OBJDIR=obj
 LIBDIR=.
-VPATH=.:syscalls
+VPATH=.:mm:syscalls
 TESTDIR=t
 
 
