@@ -1,6 +1,7 @@
 #include <stdlib.h>
 #include <stdio.h>
 #include <string.h>
+#include "mm/kmalloc.h"
 #include "initial_vga.h"
 #include "printk.h"
 
