@@ -1,3 +1,7 @@
+2006-03-15: (Ilja) moved rudimentary kmalloc code from libc to
+	kernel/mm, since that's what it is: part of the kernel's
+	memory management.
+
 2005-12-21: (Antti) Multitasking sorta works :P Legendary proof of
 	concept with A's and B's...
 
